--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -15,7 +15,7 @@
       <h4>Kanban Project Management Tool</h4>
       <div>
         <a class="question-icon" href="">
-          <img src="..//assets/icon/Property 1=Default.png" alt="">
+          <img src="..//assets/icons/Property 1=Default.png" alt="">
         </a>
 
 
@@ -29,22 +29,22 @@
       <div class="menu">
         <div>
           <div class="summery-button">
-            <img class="nav-icon" src="../assets/icon/Property 1=Summary.png" alt="" />
+            <img class="nav-icon" src="../assets/icons/Property 1=Summary.png" alt="" />
             <p>Summary</p>
           </div>
 
           <div class="add-tast-button">
-            <img class="nav-icon" src="../assets/icon/Property 1=Add task.png" alt="" />
+            <img class="nav-icon" src="../assets/icons/Property 1=Add task.png" alt="" />
             <p>Add task</p>
           </div>
 
           <div class="board-button">
-            <img class="nav-icon" src="../assets/icon/Property 1=Board.png" alt="" />
+            <img class="nav-icon" src="../assets/icons/Property 1=Board.png" alt="" />
             <p>Board</p>
           </div>
 
           <div class="contacts-button">
-            <img class="nav-icon" src="../assets/icon/Property 1=Contacts.png" alt="" />
+            <img class="nav-icon" src="../assets/icons/Property 1=Contacts.png" alt="" />
             <p>Contacts</p>
           </div>
         </div>
