--- a/navBar/navBar.html
+++ b/navBar/navBar.html
@@ -13,19 +13,19 @@
         <img class="iconNavBar" src="../assets/icons/Capa 2.svg" alt="">
         <div class="Menu">
             <a href="#" class="link">
-                <img src="../assets/icons/iconSummery.jpg" class="menuLinkIcon" alt="Icon from Summery">
+                <img src="../assets/icons/iconSummery.svg" class="menuLinkIcon" alt="Icon from Summery">
                 <h5>Summery</h5>
             </a>
             <a href="#" class="link">
-                <img src="../assets/icons/iconAddTask.jpg" class="menuLinkIcon" alt="Icon from Add Task">
+                <img src="../assets/icons/iconAddTask.svg" class="menuLinkIcon" alt="Icon from Add Task">
                 <h5>Add Task</h5>
             </a>
             <a href="#" class="link">
-                <img src="../assets/icons/iconBoard.jpg" class="menuLinkIcon" alt="Icon from Board">
+                <img src="../assets/icons/iconBoard.svg" class="menuLinkIcon" alt="Icon from Board">
                 <h5>Board</h5>
             </a>
             <a href="#" class="link">
-                <img src="../assets/icons/iconContacts.jpg" class="menuLinkIcon" alt="Icon from Contacts">
+                <img src="../assets/icons/iconContacts.svg" class="menuLinkIcon" alt="Icon from Contacts">
                 <h5>Contacts</h5>
             </a>
         </div>
