--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/navbar.css" />
     <link rel="stylesheet" href="styles/standart.css" />
+    <link rel="stylesheet" href="/assets/fonts/fonts.css">
     <script src="scripts/script.js"></script>
 
     <title>Document</title>
