--- a/loginView/index.html
+++ b/loginView/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="../assets/icons/Capa 1.png">
     <link rel="stylesheet" href="./styles/assets.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="scripts/script.js"></script>
+    <script type="module" src="scripts/firebase.js"></script>
 </head>
 
-<body>
+<body onload="onloadFunc()">
     <header>
         <div class="logoDiv">
             <img class="headerLogo" src="../assets/icons/Capa 1.png" alt="logo">
@@ -27,8 +30,8 @@
                 <h1>Log in</h1>
             </div>
             <div class="inputFieldsLogin">
-                <input class="emailInputStyle" id="emailInput" type="text" placeholder="Email">
-                <input class="emailInputStyle" id="passwordInput" type="text" placeholder="Password">
+                <input class="emailInputStyle" id="emailInputLogin" type="text" placeholder="Email">
+                <input class="emailInputStyle" id="passwordInputLogin" type="text" placeholder="Password">
             </div>
             <label>
                 <input type="checkbox" name="myCheckbox" value="rememberMe"> Remember me
@@ -55,8 +58,7 @@
                 </span><a class="linkPrivacyPolicy" href="#">Privacy policy</a>
             </label>
             <div class="loginButtons">
-                <p class="blueBtn">Log in</p>
-                <p class="outlinedText">Guest Log in</p>
+                <p class="blueBtn" id="createUserBtn">Sign up</p>
             </div>
         </div>
     </main>
@@ -65,6 +67,8 @@
         <p>Privacy Policy</p>
         <p>Legal Notice</p>
     </footer>
+    <script type="module" src="./scripts/firebase-firestore.js"></script>
+    <script src="./scripts/firebase-realtime.js"></script>    
 </body>
 
 </html>
