--- a/legalNotice/index.html
+++ b/legalNotice/index.html
@@ -17,13 +17,13 @@
     <header>
       <h4>Kanban Project Management Tool</h4>
       <div class="header-div">
-        <a href="">
+        <!-- <a href="">
           <img
             class="question-icon"
             src="..//assets/icons/default-icon.svg"
             alt=""
           />
-        </a>
+        </a> -->
         <img class="mobile-logo" src="/assets/img/logo-black.svg" alt="" />
 
         <div class="account" onclick="">
