--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -17,7 +17,7 @@
     <header>
       <h4>Kanban Project Management Tool</h4>
       <div class="header-div">
-        <a href="">
+        <a href="/help/index.html">
           <img
             class="question-icon"
             src="..//assets/icons/default-icon.svg"
