--- a/loginView/index.html
+++ b/loginView/index.html
@@ -58,7 +58,7 @@
                 </span><a class="linkPrivacyPolicy" href="#">Privacy policy</a>
             </label>
             <div class="loginButtons">
-                <p class="blueBtn" id="createUserBtn">Sign up</p>
+                <p onclick="signUpNewUser()" class="blueBtn" id="createUserBtn">Sign up</p>
             </div>
         </div>
     </main>
