--- a/loginView/index.html
+++ b/loginView/index.html
@@ -15,7 +15,7 @@
 <body onload="onloadFunc()">
     <header>
         <div class="logoDiv">
-            <img class="headerLogo" src="../assets/icons/Capa 1.png" alt="logo">
+            <img class="headerLogo" src="../assets/icons/Capa 1.svg" alt="logo">
         </div>
         <div class="signUp">
             <p class="blacktext" id="dNonen1">Not a Join user?</p>
@@ -29,8 +29,8 @@
                 <h1>Log in</h1>
             </div>
             <div class="inputFieldsLogin">
-                <input class="emailInputStyle" id="emailInputLogin" type="text" placeholder="Email">
-                <input class="emailInputStyle" id="passwordInputLogin" type="text" placeholder="Password">
+                <input class="emailInputStyle" id="emailInputLogin" type="email" placeholder="Email">
+                <input class="emailInputStyle" id="passwordInputLogin" type="password" placeholder="Password">
             </div>
             <label>
                 <input type="checkbox" name="myCheckbox" value="rememberMe"> Remember me
@@ -48,20 +48,16 @@
             </div>
             <div class="inputFieldsLogin">
                 <input class="emailInputStyle" id="nameInput" type="text" placeholder="Name">
-                <input class="emailInputStyle" id="emailInput" type="text" placeholder="Email">
-                <input class="emailInputStyle" id="passwordInput" type="text" placeholder="Password">
-                <input class="emailInputStyle" id="passwordConfirmInput" type="text" placeholder="Confirm Password">
+                <input class="emailInputStyle" id="emailInput" type="email" placeholder="Email">
+                <input class="emailInputStyle" id="passwordInput" type="password" placeholder="Password">
+                <input class="emailInputStyle" id="passwordConfirmInput" type="password" placeholder="Confirm Password">
             </div>
             <label>
                 <input class="checkboxText" type="checkbox" name="myCheckbox" value="rememberMe"><span>I accept the
                 </span><a class="linkPrivacyPolicy" href="#">Privacy policy</a>
             </label>
             <div class="loginButtons">
-<<<<<<< HEAD
                 <p onclick="signUpNewUser()" class="blueBtn" id="createUserBtn">Sign up</p>
-=======
-                <p class="blueBtn" onclick="signUpNewUser()" id="createUserBtn">Sign up</p>
->>>>>>> 5453f95fd15b9fa41ed5d10e636ef6a744ea6139
             </div>
         </div>
     </main>
