--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -16,6 +16,9 @@
     <div class="contacts">
         <button class="addContactBtn">Add new contact<img src="/assets/icons/person_add.svg"
                 alt="add_person_icon"></button>
+                <div id="renderContacts">
+                    
+                </div>
     </div>
     <div class="contactsInfo">
         <div class="contactsHeader">
