--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -1,86 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/header.css" />
-    <link rel="stylesheet" href="styles/navbar.css" />
-    <link rel="stylesheet" href="styles/standart.css" />
-    <link rel="stylesheet" href="/assets/fonts/fonts.css" />
-    <link rel="stylesheet" href="styles/resopnsive-header.css" />
-    <link rel="stylesheet" href="styles/responsive-navbar.css" />
-    <script src="scripts/script.js"></script>
 
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="leftSide">
-      <nav>
-        <img class="logo" src="../assets/img/logo-white.svg" alt="" />
-  
-        <div class="menu">
-          <div class="menu-buttons">
-            <div class="summery-button">
-              <img
-                class="nav-icon"
-                src="../assets/icons/summary-icon.svg"
-                alt=""
-              />
-              <p>Summary</p>
-            </div>
-  
-            <div class="add-tast-button">
-              <img
-                class="nav-icon"
-                src="../assets/icons/add-task-icon.svg"
-                alt=""
-              />
-              <p>Add task</p>
-            </div>
-  
-            <div class="board-button">
-              <img class="nav-icon" src="../assets/icons/board-icon.svg" alt="" />
-              <p>Board</p>
-            </div>
-  
-            <div class="contacts-button">
-              <img
-                class="nav-icon"
-                src="../assets/icons/contacts-icon.svg"
-                alt=""
-              />
-              <p>Contacts</p>
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles/header.css" />
+  <link rel="stylesheet" href="styles/navbar.css" />
+  <link rel="stylesheet" href="styles/standart.css" />
+  <link rel="stylesheet" href="/assets/fonts/fonts.css" />
+  <link rel="stylesheet" href="styles/resopnsive-header.css" />
+  <link rel="stylesheet" href="styles/responsive-navbar.css" />
+  <link rel="stylesheet" href="/contactsView/style/overlay.css">
+  <script src="./script.js"></script>
+  <script src="../global.js"></script>
+
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="leftSide">
+    <nav>
+      <img class="logo" src="../assets/img/logo-white.svg" alt="" />
+
+      <div class="menu">
+        <div class="menu-buttons">
+          <div class="summery-button">
+            <img class="nav-icon" src="../assets/icons/summary-icon.svg" alt="" />
+            <p onclick="activateOverlay()">Summary</p>
           </div>
-  
-          <div class="nav-links">
-            <a class="privacy-policy" href="">Privacy Policy</a>
-            <a class="legal-notice" href="">Legal notice</a>
+
+          <div class="add-tast-button">
+            <img class="nav-icon" src="../assets/icons/add-task-icon.svg" alt="" />
+            <p>Add task</p>
+          </div>
+
+          <div class="board-button">
+            <img class="nav-icon" src="../assets/icons/board-icon.svg" alt="" />
+            <p>Board</p>
+          </div>
+
+          <div class="contacts-button">
+            <img class="nav-icon" src="../assets/icons/contacts-icon.svg" alt="" />
+            <p>Contacts</p>
           </div>
         </div>
-      </nav>
-    </div>
-    <div class="rightSide">
-      <header>
-        <h4>Kanban Project Management Tool</h4>
-        <div class="header-div">
-          <a href="">
-            <img
-              class="question-icon"
-              src="..//assets/icons/default-icon.svg"
-              alt=""
-            />
-          </a>
-          <img class="mobile-logo" src="/assets/img/logo-black.svg" alt="" />
-  
-          <div class="account" onclick="">
-            <p>SM</p>
+
+        <div class="nav-links">
+          <a class="privacy-policy" href="">Privacy Policy</a>
+          <a class="legal-notice" href="">Legal notice</a>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div class="rightSide">
+    <header>
+      <h4>Kanban Project Management Tool</h4>
+      <div class="header-div">
+        <a href="">
+          <img class="question-icon" src="../assets/icons/default-icon.svg" alt="" />
+        </a>
+        <img class="mobile-logo" src="/assets/img/logo-black.svg" alt="" />
+
+        <div class="account" onclick="">
+          <p>SM</p>
+        </div>
+      </div>
+    </header>
+    <iframe src="../contactsView/index.html" title="Contacts" width="100%" height="100%" frameborder="0"></iframe>
+    <div class="overlay d_none" id="overlayId">
+      <div class="logoDiv">
+        <div class="logo">
+          <img src="/assets/icons/Capa 2.svg" alt="">
+        </div>
+        <div class="margin_bottom">
+          <p class="overlayBigText">Add contact</p>
+          <span class="blueUnderline">Tasks </span><span>are better with a team!</span>
+        </div>
+      </div>
+      <div class="addContactDiv">
+        <div class="photoSelectionDiv">
+          <img id="profilePic" src="/assets/icons/person.svg" alt="profilePic">
+        </div>
+        <div class="inputFieldDiv">
+          <div class="closeButton">
+            <img src="/assets/icons/Close.svg" class="pointer" onclick="activateOverlay()" alt="close_button">
+          </div>
+          <input class="inputFields" id="inputName" type="text" placeholder="Name">
+          <input class="inputFields" id="inputEmail" type="text" placeholder="Email">
+          <input class="inputFields" id="inputPhone" type="text" placeholder="Phone">
+          <div class="buttons">
+            <p class="cancelBtn" onclick="toggleOverlay()">Cancel<img src="/assets/icons/Close.svg" alt="cancelIcon">
+            </p>
+            <button class="createBtn">Create contacts<img src="/assets/icons/check.svg" alt=""></button>
           </div>
         </div>
-      </header>
-      <iframe src="../contactsView/index.html" title="Contacts" width="100%" height="100%" frameborder="0"></iframe>
-
+      </div>
     </div>
-    
-  </body>
+  </div>
+</body>
+
 </html>
