--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -8,21 +8,13 @@
     <link rel="icon" type="image/png" href="../assets/icons/Capa 1.png">
     <script src="../loginView/scripts/firebase-realtime.js"></script>
     <script src="script/script.js" defer></script>
-    <script src="../global.js"></script>
-    <link rel="stylesheet" href="style/assets.css">
-    <link rel="stylesheet" href="style/standart.css">
-    <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body>
+<body onload="renderContacts()">
     <div class="contacts">
-        <button class="addContactBtn">Add new contact<img src="/assets/icons/person_add.svg"
+        <button class="addContactBtn" onclick="toggleOverlay()">Add new contact<img src="/assets/icons/person_add.svg"
                 alt="add_person_icon"></button>
-                <div id="renderContacts">
-                    
-                </div>
-        <button class="addContactBtn" id="toggleBtn" onclick="toggleOverlay()">Add new contact<img
-                src="/assets/icons/person_add.svg" alt="add_person_icon"></button>
+        <div id="contactsContent"></div>
     </div>
     <div class="contactsInfo">
         <div class="contactsHeader">
@@ -31,6 +23,35 @@
             <span class="contactsSideText">Better with a team</span>
         </div>
         <div id="contactInfoExtendet"></div>
+    </div>
+    <div class="overlay d_none" id="overlayId">
+        <div class="logoDiv">
+          <div class="logo">
+            <img src="/assets/icons/Capa 2.svg" alt="">
+          </div>
+          <div class="margin_bottom">
+            <p class="overlayBigText">Add contact</p>
+            <span class="blueUnderline">Tasks </span><span>are better with a team!</span>
+          </div>
+        </div>
+        <div class="addContactDiv">
+          <div class="photoSelectionDiv">
+            <img id="profilePic" src="/assets/icons/person.svg" alt="profilePic">
+          </div>
+          <div class="inputFieldDiv">
+            <div class="closeButton">
+              <img src="/assets/icons/Close.svg" class="pointer" onclick="toggleOverlay()" alt="close_button">
+            </div>
+            <input class="inputFields" id="inputName" type="text" placeholder="Name">
+            <input class="inputFields" id="inputEmail" type="text" placeholder="Email">
+            <input class="inputFields" id="inputPhone" type="text" placeholder="Phone">
+            <div class="buttons">
+              <p class="cancelBtn" onclick="toggleOverlay()">Cancel<img src="/assets/icons/Close.svg" alt="cancelIcon"></p>
+              <button class="createBtn" onclick="createContact()">Create contacts<img src="/assets/icons/check.svg" alt=""></button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 </body>
 
