--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -7,18 +7,20 @@
   <link rel="stylesheet" href="styles/header.css" />
   <link rel="stylesheet" href="styles/navbar.css" />
   <link rel="stylesheet" href="styles/standart.css" />
-  <link rel="stylesheet" href="/assets/fonts/fonts.css" />
   <link rel="stylesheet" href="styles/resopnsive-header.css" />
   <link rel="stylesheet" href="styles/responsive-navbar.css" />
   <link rel="stylesheet" href="/contactsView/style/overlay.css">
-  <script src="./script.js"></script>
-  <script src="../global.js"></script>
-
+  <link rel="stylesheet" href="../contactsView/style/assets.css">
+  <link rel="stylesheet" href="../contactsView/style/standart.css">
+  <link rel="stylesheet" href="../contactsView/style/style.css">
+  <link rel="stylesheet" href="../contactsView/style/contact.css">
+  <script src="./script.js" defer></script>
+  <script src="../loginView/scripts/firebase-realtime.js"></script>
   <title>Document</title>
 </head>
 
 <body>
-  <div class="leftSide">
+  <div class="leftSide" id="leftSideId">
     <nav>
       <img class="logo" src="../assets/img/logo-white.svg" alt="" />
 
@@ -52,7 +54,7 @@
       </div>
     </nav>
   </div>
-  <div class="rightSide">
+  <div class="rightSide" id="rightSideId">
     <header>
       <h4>Kanban Project Management Tool</h4>
       <div class="header-div">
@@ -66,37 +68,8 @@
         </div>
       </div>
     </header>
-    <iframe src="../contactsView/index.html" title="Contacts" width="100%" height="100%" frameborder="0"></iframe>
-    <div class="overlay d_none" id="overlayId">
-      <div class="logoDiv">
-        <div class="logo">
-          <img src="/assets/icons/Capa 2.svg" alt="">
-        </div>
-        <div class="margin_bottom">
-          <p class="overlayBigText">Add contact</p>
-          <span class="blueUnderline">Tasks </span><span>are better with a team!</span>
-        </div>
-      </div>
-      <div class="addContactDiv">
-        <div class="photoSelectionDiv">
-          <img id="profilePic" src="/assets/icons/person.svg" alt="profilePic">
-        </div>
-        <div class="inputFieldDiv">
-          <div class="closeButton">
-            <img src="/assets/icons/Close.svg" class="pointer" onclick="activateOverlay()" alt="close_button">
-          </div>
-          <input class="inputFields" id="inputName" type="text" placeholder="Name">
-          <input class="inputFields" id="inputEmail" type="text" placeholder="Email">
-          <input class="inputFields" id="inputPhone" type="text" placeholder="Phone">
-          <div class="buttons">
-            <p class="cancelBtn" onclick="toggleOverlay()">Cancel<img src="/assets/icons/Close.svg" alt="cancelIcon">
-            </p>
-            <button class="createBtn">Create contacts<img src="/assets/icons/check.svg" alt=""></button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
+    <div id="contentArea"></div>
 </body>
 
 </html>
