--- a/helpView/index.html
+++ b/helpView/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="styles/help.css" />
     <script src="scripts/script.js"></script>
 
-    <title>Document</title>
+    <title>Join - Help</title>
   </head>
   <body>
+
+    <section class="leftSide">
     <nav>
       <img class="logo" src="../assets/img/logo-white.svg" alt="" />
 
@@ -54,13 +56,14 @@
         </div>
 
         <div class="nav-links">
-          <a class="privacy-policy" href="">Privacy Policy</a>
-          <a class="legal-notice" href="">Legal notice</a>
+          <a class="privacy-policy" href="/privacyPolicy/index.html">Privacy Policy</a>
+          <a class="legal-notice" href="/legalNotice/index.html">Legal notice</a>
         </div>
       </div>
     </nav>
+  </section>
 
-    <section>
+    <section class="rightSide">
       <header>
         <h4>Kanban Project Management Tool</h4>
         <div class="header-div">
