--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -7,7 +7,12 @@
     <title>Contact</title>
     <link rel="icon" type="image/png" href="../assets/icons/Capa 1.png">
     <script src="../loginView/scripts/firebase-realtime.js"></script>
-    <script src="script/script.js" defer></script>
+    <script src="script/script.js"></script>
+    <link rel="stylesheet" href="style/overlay.css">
+    <link rel="stylesheet" href="style/assets.css">
+    <link rel="stylesheet" href="style/standart.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/contact.css">
 </head>
 
 <body onload="renderContacts()">
