--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="leftSide" id="leftSideId">
     <nav>
-      <img class="logo" src="../assets/img/logo-white.svg" alt="" />
+      <img class="join-logo" src="../assets/img/logo-white.svg" alt="" />
 
       <div class="menu">
         <div class="menu-buttons">
