--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -33,7 +33,6 @@
 
   </section>
     
-
     <div class="overlay d_none" id="overlayId">
         <div class="logoDiv">
           <div class="logo">
@@ -53,7 +52,7 @@
               <img src="/assets/icons/Close.svg" class="pointer" onclick="toggleOverlay()" alt="close_button">
             </div>
             <input class="inputFields" id="inputName" type="text" placeholder="Name">
-            <input class="inputFields" id="inputEmail" type="text" placeholder="Email">
+            <input class="inputFields" id="inputEmail" type="email" placeholder="Email">
             <input class="inputFields" id="inputPhone" type="text" placeholder="Phone">
             <div class="buttons">
               <p class="cancelBtn" onclick="toggleOverlay()">Cancel<img src="/assets/icons/Close.svg" alt="cancelIcon"></p>
