--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="../contactsView/style/standart.css">
   <link rel="stylesheet" href="../contactsView/style/style.css">
   <link rel="stylesheet" href="../contactsView/style/contact.css">
+  <link rel="stylesheet" href="../contactsView/style/responsive-contact.css">
   <script src="./script.js" defer></script>
   <script src="../contactsView/script/script.js" defer></script>
   <script src="../loginView/scripts/firebase-realtime.js"></script>
