Gabriel Push - changed name from icons to icon

--- a/helpView/index.html
+++ b/helpView/index.html
@@ -25,7 +25,7 @@
           <div class="summery-button">
             <img
               class="nav-icon"
-              src="../assets/icons/summary-icon.svg"
+              src="../assets/icon/summary-icon.svg"
               alt=""
             />
             <p>Summary</p>
@@ -34,21 +34,21 @@
           <div class="add-tast-button">
             <img
               class="nav-icon"
-              src="../assets/icons/add-task-icon.svg"
+              src="../assets/icon/add-task-icon.svg"
               alt=""
             />
             <p>Add task</p>
           </div>
 
           <div class="board-button">
-            <img class="nav-icon" src="../assets/icons/board-icon.svg" alt="" />
+            <img class="nav-icon" src="../assets/icon/board-icon.svg" alt="" />
             <p>Board</p>
           </div>
 
           <div class="contacts-button">
             <img
               class="nav-icon"
-              src="../assets/icons/contacts-icon.svg"
+              src="../assets/icon/contacts-icon.svg"
               alt=""
             />
             <p>Contacts</p>
@@ -70,7 +70,7 @@
           <!-- <a href="">
             <img
               class="question-icon"
-              src="..//assets/icons/default-icon.svg"
+              src="..//assets/icon/default-icon.svg"
               alt=""
             />
           </a> -->
@@ -84,7 +84,7 @@
 
       <main>
         <a href="">
-          <img class="arrow-icon" src="/assets/icons/arrow.svg" alt="" />
+          <img class="arrow-icon" src="/assets/icon/arrow.svg" alt="" />
         </a>
 
         <h1>Help</h1>
