--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -27,22 +27,22 @@
       <div class="menu">
         <div class="menu-buttons">
           <div class="summery-button">
-            <img class="nav-icon" src="../assets/icons/summary-icon.svg" alt="" />
+            <img class="nav-icon" src="../assets/icon/summary-icon.svg" alt="" />
             <p onclick="activateOverlay()">Summary</p>
           </div>
 
           <div class="add-tast-button">
-            <img class="nav-icon" src="../assets/icons/add-task-icon.svg" alt="" />
+            <img class="nav-icon" src="../assets/icon/add-task-icon.svg" alt="" />
             <p>Add task</p>
           </div>
 
           <div class="board-button">
-            <img class="nav-icon" src="../assets/icons/board-icon.svg" alt="" />
+            <img class="nav-icon" src="../assets/icon/board-icon.svg" alt="" />
             <p>Board</p>
           </div>
 
           <div class="contacts-button">
-            <img class="nav-icon" src="../assets/icons/contacts-icon.svg" alt="" />
+            <img class="nav-icon" src="../assets/icon/contacts-icon.svg" alt="" />
             <p>Contacts</p>
           </div>
         </div>
@@ -59,7 +59,7 @@
       <h4>Kanban Project Management Tool</h4>
       <div class="header-div">
         <a href="">
-          <img class="question-icon" src="../assets/icons/default-icon.svg" alt="" />
+          <img class="question-icon" src="../assets/icon/default-icon.svg" alt="" />
         </a>
         <img class="mobile-logo" src="/assets/img/logo-black.svg" alt="" />
 
