--- a/loginView/index.html
+++ b/loginView/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="../assets/icons/Capa 1.png">
+    <link rel="icon" type="image/png" href="../assets/icon/Capa 1.png">
     <link rel="stylesheet" href="./styles/assets.css">
     <link rel="stylesheet" href="./styles/style.css">
     <script src="scripts/script.js"></script>
@@ -15,7 +15,7 @@
 <body onload="onloadFunc()">
     <header>
         <div class="logoDiv">
-            <img class="headerLogo" src="../assets/icons/Capa 1.svg" alt="logo">
+            <img class="headerLogo" src="../assets/icon/Capa 1.svg" alt="logo">
         </div>
         <div class="signUp">
             <p class="blacktext" id="dNonen1">Not a Join user?</p>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="loginWindow d_none" id="registerWindowId">
-            <img class="backArrow" onclick="signUp()" src="../assets/icons/arrow.png" alt="backArrow">
+            <img class="backArrow" onclick="signUp()" src="../assets/icon/arrow.png" alt="backArrow">
             <div class="registerWindowLogo">
                 <h1>Sign up</h1>
             </div>
