--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="icon" type="image/png" href="../assets/icons/Capa 1.png" />
+    <link rel="icon" type="image/png" href="../assets/icon/Capa 1.png" />
     <script src="../loginView/scripts/firebase-realtime.js"></script>
     <script src="script/script.js"></script>
     <link rel="stylesheet" href="style/overlay.css" />
@@ -19,11 +19,11 @@
       <div class="contacts">
         <button class="addContactBtn" onclick="toggleOverlay()">
           Add new contact<img
-            src="/assets/icons/person_add.svg"
+            src="/assets/icon/person_add.svg"
             alt="add_person_icon"
           />
         </button>
-          <img src="/assets/icons/person_add.svg" alt="add_person_icon" />
+          <img src="/assets/icon/person_add.svg" alt="add_person_icon" />
         </button>
         <div id="contactsContent"></div>
       </div>
@@ -49,7 +49,7 @@
     <div class="overlay d_none" id="overlayId">
       <div class="logoDiv">
         <div class="logo">
-          <img src="/assets/icons/Capa 2.svg" alt="" />
+          <img src="/assets/icon/Capa 2.svg" alt="" />
         </div>
 
         <div class="margin_bottom">
@@ -63,7 +63,7 @@
         <div class="photoSelectionDiv">
           <img
             id="profilePic"
-            src="/assets/icons/person.svg"
+            src="/assets/icon/person.svg"
             alt="profilePic"
           />
         </div>
@@ -71,7 +71,7 @@
         <div class="inputFieldDiv">
           <div class="closeButton">
             <img
-              src="/assets/icons/Close.svg"
+              src="/assets/icon/Close.svg"
               class="pointer"
               onclick="toggleOverlay()"
               alt="close_button"
@@ -97,10 +97,10 @@
           />
           <div class="buttons">
             <p class="cancelBtn" onclick="toggleOverlay()">
-              Cancel<img src="/assets/icons/Close.svg" alt="cancelIcon" />
+              Cancel<img src="/assets/icon/Close.svg" alt="cancelIcon" />
             </p>
             <button class="createBtn" onclick="createContact()">
-              Create contacts<img src="/assets/icons/check.svg" alt="" />
+              Create contacts<img src="/assets/icon/check.svg" alt="" />
             </button>
           </div>
         </div>
