--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -42,7 +42,7 @@
           <div class="blueLine"></div>
           <span class="contactsSideText">Better with a team</span>
         </div>
-        <div id="contactInfoExtendet"></div>
+        <div id="contactInfoExtendetMobile"></div>
       </div>
     </section>
 
@@ -115,7 +115,7 @@
     <div class="overlay d_none" id="overlayEditContact">
       <div class="logoDiv">
         <div class="logo">
-          <img src="/assets/icons/Capa 2.svg" alt="" />
+          <img src="/assets/icon/Capa 2.svg" alt="" />
         </div>
 
         <div class="margin_bottom">
@@ -127,7 +127,7 @@
         <div class="photoSelectionDiv">
           <img
             id="profileEditPic"
-            src="/assets/icons/person.svg"
+            src="/assets/icon/person.svg"
             alt="profilePic"
           />
         </div>
@@ -135,7 +135,7 @@
         <div class="inputFieldDiv">
           <div class="closeButton">
             <img
-              src="/assets/icons/Close.svg"
+              src="/assets/icon/Close.svg"
               class="pointer"
               onclick="toggleEditOverlay()"
               alt="close_button"
@@ -161,10 +161,10 @@
           />
           <div class="buttons">
             <p class="cancelBtn" onclick="singleContactDelete()">
-              Delete<img src="/assets/icons/Close.svg" alt="cancelIcon" />
+              Delete<img src="/assets/icon/Close.svg" alt="cancelIcon" />
             </p>
             <button class="createBtn" onclick="singleContactSave()">
-              Save<img src="/assets/icons/check.svg" alt="" />
+              Save<img src="/assets/icon/check.svg" alt="" />
             </button>
           </div>
         </div>
