--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -19,7 +19,7 @@
   <script src="./script.js" defer></script>
   <script src="../contactsView/script/script.js" defer></script>
   <script src="../loginView/scripts/firebase-realtime.js"></script>
-  <title>Document</title>
+  <title>Header-Navbar</title>
 </head>
 <body>
   <div class="leftSide" id="leftSideId">
