--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -160,10 +160,10 @@
             placeholder="Phone"
           />
           <div class="buttons">
-            <p class="cancelBtn" onclick="singleContactDelete()">
+            <p class="cancelBtn" onclick="singleContactDelete($[index])">
               Delete<img src="/assets/icons/Close.svg" alt="cancelIcon" />
             </p>
-            <button class="createBtn" onclick="singleContactSave()">
+            <button class="createBtn" onclick="singleContactSave($)">
               Save<img src="/assets/icons/check.svg" alt="" />
             </button>
           </div>
