gabriel aktueller stand

--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -107,7 +107,7 @@
           <p class="cancelBtn" onclick="singleContactDelete()">
             Delete<img src="/assets/icon/Close.svg" alt="cancelIcon" />
           </p>
-          <button class="createBtn" onclick="updateContactInFirebase()">
+          <button class="createBtn" onclick="">
             Save<img src="/assets/icon/check.svg" alt="" />
           </button>
         </div>
