--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -68,7 +68,7 @@
         <input class="inputFields" id="inputName" type="text" placeholder="Name" />
         <input class="inputFields" id="inputEmail" type="text" placeholder="Email" />
         <input class="inputFields" type="text" id="inputPhone" oninput="validatePhoneInput(this)"
-          placeholder="Telefonnummer">
+          placeholder="Phone">
         <div class="buttons">
           <p class="cancelBtn" onclick="toggleOverlay()">
             Cancel<img src="/assets/icon/Close.svg" alt="cancelIcon" />
