--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -38,12 +38,12 @@
             <p>Add task</p>
           </div>
 
-          <div class="board-button">
+          <div class="board-button" onclick="loadBoardView()">
             <img class="nav-icon" src="../assets/icon/board-icon.svg" alt="" />
             <p>Board</p>
           </div>
 
-          <div class="contacts-button">
+          <div class="contacts-button" onclick="loadContactsView()">
             <img class="nav-icon" src="../assets/icon/contacts-icon.svg" alt="" />
             <p>Contacts</p>
           </div>
