--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -57,7 +57,7 @@
     </nav>
   </div>
   <div class="rightSide" id="rightSideId">
-    <header>
+    <header id="headerId">
       <h4>Kanban Project Management Tool</h4>
       <div class="header-div">
         <a href="">
